<resources>
    <!--<string name="app_name">Watook</string>-->
    <string name="app_name">Watook</string>

    <string name="firebase_api_key">AIzaSyBVjmHZZnvtswNJ9AakijMj5CezLKD4MzU</string>

    <string name="facebook_app_id">1288795094521349</string>
    <string name="fb_login_protocol_scheme">fb1288795094521349</string>




    <string name="FONT_CAMBAYREGULAR">fonts/CambayRegular.ttf</string>
    <string name="FONT_MY_RIADPRO_REGULAR">fonts/MyriadPro-Regular.otf</string>
    <string name="FONT_OPEN_SANS_BOLD">fonts/OpenSans-Bold.ttf</string>
    <string name="FONT_OPEN_SANS_BOLD_ITALIC">fonts/OpenSans-BoldItalic.ttf</string>
    <string name="FONT_OPEN_SANS_EXTRA_BOLD">fonts/OpenSans-ExtraBold.ttf</string>
    <string name="FONT_OPEN_SANS_EXTRA_BOLD_ITALIC">fonts/OpenSans-ExtraBoldItalic.ttf</string>
    <string name="FONT_OPEN_SANS_ITALIC">fonts/OpenSans-Italic.ttf</string>
    <string name="FONT_OPEN_SANS_LIGHT">fonts/OpenSans-Light.ttf</string>
    <string name="FONT_OPEN_SANS_LIGHT_ITALIC">fonts/OpenSans-LightItalic.ttf</string>
    <string name="FONT_OPEN_SANS_REGULAR">fonts/OpenSans-Regular.ttf</string>
    <string name="FONT_OPEN_SANS_SEMI_BOLD">fonts/OpenSans-Semibold.ttf</string>
    <string name="FONT_OPEN_SANS_SEMI_BOLD_ITALIC">fonts/OpenSans-SemiboldItalic.ttf</string>
    <string name="FONT_PROXI_MANOVA_LIGHT">fonts/ProximaNovaLight0.otf</string>
    <string name="FONT_PROXI_MANOVA_REGULAR">fonts/ProximaNovaRegular0.otf</string>
    <string name="FONT_PROXI_MANOVA_SEMI_BOLD">fonts/ProximaNovaSemibold0.otf</string>
    <string name="FONT_TITILLIUM_TEXT25L600">fonts/TitilliumText25L002.otf</string>
    <string name="FONT_TITILLIUM_TEXT25L400">fonts/TitilliumText25L003.otf</string>
    <string name="FONT_TITILLIUM_TEXT25L004_250">fonts/TitilliumText25L004_250.otf</string>









    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Location permissions are needed for providing suggestions based on location."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="log_in_with_facebook">Log In with Facebook</string>

    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_register">New user, tap here to register !</string>
    <string name="oops_something_went_wrong">Oops! Something went wrong…</string>
    <string name="oops_server_response_failure">Oops! Server response failure…</string>

    <string name="user_successfully_added">User successfully added!</string>
    <string name="user_unable_to_add">Unable to add user!</string>
    <string name="adding_user_to_db">Adding user to database.</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait…</string>

    <string name="font_family_roboto_light">sans-serif-thin</string>
    <string name="type_a_message">Type a message…</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="cancel">Cancel</string>
    <string name="hello_blank_fragment">hello blank fragment</string>
    <string name="friends">Friends</string>
    <string name="contacts">Contacts</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="distance">Distance</string>
    <string name="age">Age</string>
    <string name="age_range">Age Range</string>
    <string name="show_me">Show Me</string>
    <string name="feature_in">Feature In</string>
    <string name="show_distance_in">Show Distance In</string>
    <string name="like">Like</string>
    <string name="like_back">Like Back</string>
    <string name="reject">Reject</string>
    <string name="bio">Bio…</string>


</resources>
